# model-training

./: .flake8  .gitignore  .pylintrc  ACTIVITY.md  README.md  dvc.yaml  index.html  modelsphishing_model.h5.dvc  params.yaml  pylintrc  pyproject.toml  release.html  release.joblib  report.txt  requirements.txt  run.sh  scratch.txt
.dvc/: config
.github/workflows/: pylint.yaml  pytest.yaml  realease.yaml  tag.yaml
data/: data_prep.html  get_data.html  index.html
models/: evaluate.html  index.html  load_parameters.html  metrics.json  model.html  predict.html  predictions.joblib  train.html
models/plots/metrics/eval/: accuracy.tsv  loss.tsv
models/plots/metrics/train/: accuracy.tsv  loss.tsv
reports/: coverage.xml  coverage_report.txt  pylintreport.txt
reports/metrics/: .gitignore  statistics.json
src/: data_prep.py  evaluate.py  get_data.py  model.py  params.yaml  predict.py  release.py  train.py
src/Data/: data_prep.py  get_data.py
src/Models/: train.py
src/data/: data_prep.py  get_data.py
src/model/: evaluate.py  model.py  train.py
src/models/: evaluate.py  load_parameters.py  model.py  predict.py  train.py
tests/: data_invariants_test.py  data_slices_test.py  feature_test.py  features_cost_test.py  fetch_model.py  hyperparameter_test.py  intergration_test.py  memory_test.py  model_test.py  mutamorphic_test.py  non_determinism.py  non_determinism_test.py  staleness_test.py
