[tool.poetry]
name = "model-training"
version = "0.1.0"
description = ""
authors = ["Mitali Patil <m.s.patil@student.tudelft.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
dvc = "^3.51.0"
dvclive = "^3.46.0"
seaborn = "^0.13.2"
pytest = "^8.2.1"
matplotlib = "^3.9.0"
dvc-gdrive = "^3.0.1"
joblib = "^1.4.2"
kaggle = "^1.6.14"
keras = "^3.3.3"
scikit-learn = "^1.5.0"
pylint = "^3.2.2"
numpy = "^1.26.4"
tensorflow = {version = ">2.16"}
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
